# old_SxB

./: .gitignore  CMakeLists.txt  README.md  Windows.bat  dotGraphviz.sh
cmake/: Config.cmake
cmake/toolchains/: .iOS.toolchain.cmake.swp
doc/: tinybgfx_helloworld.dot
example/: CMakeLists.txt
example/example_18-ibl/: CMakeLists.txt  ibl.cpp  ibl.h  main.cpp
include/sxbCommon/: utils.h
ios/: Info.plist
src/Example00-HelloBGFX/: CMakeLists.txt  cube.h
src/Example00-HelloWorld/: CMakeLists.txt
src/Example01-HelloWorld/: CMakeLists.txt  main.cpp
src/Example02-HelloBGFX/: CMakeLists.txt  main.cpp
src/Example12-lod/: CMakeLists.txt  lod.cpp  lod.h  main.cpp
src/Example33-pom/: CMakeLists.txt
src/ExampleTest/: CMakeLists.txt
src/sxbCommon/: CMakeLists.txt  utils.cpp
test/test_platform/: CMakeLists.txt
test/test_sfml/: CMakeLists.txt
tinyBGFX/src/bgfx/: CMakeLists.txt
tinyBGFX/src/bimg/: CMakeLists.txt
tinyBGFX/src/bx/: CMakeLists.txt
tinySFML/src/System/: CMakeLists.txt
tinySFML/src/Window/: CMakeLists.txt
